# parfum-leader-project

./: README.md
backend/: Dockerfile  README.md  config.py  fastapi_app.py  pyproject.toml
backend/src/: init_container.py
backend/src/exception/: CustomException.py  DatabaseResponseException.py  ResourseNotFoundException.py  ServerValidationException.py
backend/src/repository/: Employee_supabase_repository.py  Product_supabase_repository.py  Stores_supabase_repository.py
backend/src/repository/interfaces/: IEmployees_repository.py  IProduct_repository.py  IStores_repository.py
backend/src/router/: employee_router.py  product_router.py  store_router.py
backend/src/schema/: employee_attendance_schema.py  employee_attendance_stat_schema.py  employee_schema.py  nearest_from_store.py  nearest_schema.py  product_avaible_schema.py  product_schema.py  store_check_settings_update.py
backend/src/service/: IService.py  get_all_prod_service.py  get_attendance_stat_for_store_service.py  get_employee_attendance_service.py  get_employees_service.py  get_nearest_from_store_service.py  get_nearest_service.py  get_product_avaible_service.py  get_product_available_range_service.py  get_product_service.py  update_store_check_settings_service.py
dashboard-frontend/: README.md  package-lock.json  package.json  vite.config.ts
dashboard-frontend/src/: App.tsx
location-bot/: .gitignore  Dockerfile  README.md  bot.py  requirements.txt
location-bot/core/: handlers.py  states.py
product-tracker-bot/: .dockerignore  Dockerfile  README.md  requirements.txt
(+49 files in other folders)
